SERVER-2810 check for dropped explain cursor before accessing so